--- a/Odello/Odello.vcxproj
+++ b/Odello/Odello.vcxproj
@@ -183,14 +183,18 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="button.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Odello.h" />
     <ClInclude Include="OdelloDlg.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="utils.h" />
+    <ClInclude Include="wincontrol.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="button.cpp" />
     <ClCompile Include="Odello.cpp" />
     <ClCompile Include="OdelloDlg.cpp" />
     <ClCompile Include="pch.cpp">
@@ -199,6 +203,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="wincontrol.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Odello.rc" />
